--- a/.gitignore
+++ b/.gitignore
@@ -153,6 +153,9 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+# additional folders
+faiss_index/
+src/faiss_index/
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
